[package]
name = "oneoneseven"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.13.0", features = ["rustls"] }
async-lock = "3.4.2"
clap = { version = "4.5.60", features = ["derive"] }
aes-gcm = "0.10"
hex = "0.4"
rand = "0.10.0"
scc = "3.6.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = ["v4"] }
